Add Optimism network support alongside Polygon
- Add OptimismService and OptimismOracleService with contract addresses
- Update MidatoPayService to support both Polygon and Optimism networks
- Add network selection in frontend payment creation page
- Update API endpoints to accept network parameter
- Add network field to Payment model in Prisma schema
- Update priceOracle service to use correct oracle based on network
- Add Optimism environment variables to env.example
- Create migration to add network field to payments table

--- a/backend/env.example
+++ b/backend/env.example
@@ -19,6 +19,13 @@ POLYGON_PAYMENT_GATEWAY_ADDRESS="0x52a83a44aa073C0a423f914A6c824DA640ED2F6A"
 POLYGON_USDC_ADDRESS="0xC37c16139a8eFC8f4c2B7CAA5C607514C825FC4C"
 POLYGON_ADMIN_PRIVATE_KEY="tu_private_key_del_admin_aqui"
 
+# Optimism Configuration
+OPTIMISM_RPC_URL="https://optimism-mainnet.infura.io/v3/edab64b75f2348e2ab8939563ca78bd4"
+OPTIMISM_ORACLE_ADDRESS="0xC37c16139a8eFC8f4c2B7CAA5C607514C825FC4C"
+OPTIMISM_PAYMENT_GATEWAY_ADDRESS="0xea0964D086616e1BDae08802DB350ec3b7cB53B8"
+OPTIMISM_USDC_ADDRESS="0x3d127a80655e4650D97e4499217dC8c083A39242"
+OPTIMISM_ADMIN_PRIVATE_KEY="tu_private_key_del_admin_aqui"
+
 # Blockchain
 USDC_DECIMALS=6
 
